removed makefile and fixed a margin that was too big

--- a/frontend/template/avg_page_template/components/main-content.scss
+++ b/frontend/template/avg_page_template/components/main-content.scss
@@ -24,7 +24,7 @@
             @include fonts.roboto-medium;
             font-size: calc(1rem + 1vw);
             margin-top: 0.5em;
-            margin-bottom: 2em;
+            margin-bottom: 1em;
             margin-left: 0;
         }
     }
