--- a/frontend/template/avg_page_template/styles.css
+++ b/frontend/template/avg_page_template/styles.css
@@ -116,7 +116,7 @@
   font-style: normal;
   font-size: calc(1rem + 1vw);
   margin-top: 0.5em;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   margin-left: 0;
 }
 
